Completed day 2 problem (LeetCode #283)

--- a/Day-2.ipynb
+++ b/Day-2.ipynb
@@ -1,9 +1,130 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "05c815e5",
+   "metadata": {},
+   "source": [
+    "# LeetCode Problem 167: Two Sum II - Input Array Is Sorted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90b995af",
+   "metadata": {},
+   "source": [
+    "Given a 1-indexed array of integers numbers that is already sorted in non-decreasing order, find two numbers such that they add up to a specific target number. Let these two numbers be numbers[index1] and numbers[index2] where 1 <= index1 < index2 <= numbers.length.\n",
+    "\n",
+    "Return the indices of the two numbers, index1 and index2, added by one as an integer array [index1, index2] of length 2.\n",
+    "\n",
+    "The tests are generated such that there is exactly one solution. You may not use the same element twice.\n",
+    "\n",
+    "Your solution must use only constant extra space."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b9737ed",
+   "metadata": {},
+   "source": [
+    "### Examples:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebc051bd",
+   "metadata": {},
+   "source": [
+    "Input: numbers = [2,7,11,15], target = 9\n",
+    "Output: [1,2]\n",
+    "Explanation: The sum of 2 and 7 is 9. Therefore, index1 = 1, index2 = 2. We return [1, 2].\n",
+    "\n",
+    "Input: numbers = [2,3,4], target = 6\n",
+    "Output: [1,3]\n",
+    "Explanation: The sum of 2 and 4 is 6. Therefore index1 = 1, index2 = 3. We return [1, 3].\n",
+    "\n",
+    "Input: numbers = [-1,0], target = -1\n",
+    "Output: [1,2]\n",
+    "Explanation: The sum of -1 and 0 is -1. Therefore index1 = 1, index2 = 2. We return [1, 2]."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45997377",
+   "metadata": {},
+   "source": [
+    "## Constraints:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c507508e",
+   "metadata": {},
+   "source": [
+    "2 <= numbers.length <= 3 * 104\n",
+    "\n",
+    "-1000 <= numbers[i] <= 1000\n",
+    "\n",
+    "numbers is sorted in non-decreasing order.\n",
+    "\n",
+    "-1000 <= target <= 1000\n",
+    "\n",
+    "The tests are generated such that there is exactly one solution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d3a23f5",
+   "metadata": {},
+   "source": [
+    "## Problem Solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d5e7af58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution {\n",
+    "    public int[] twoSum(int[] numbers, int target) {\n",
+    "        int left = 0, right = numbers.length-1;\n",
+    "        while(left < right){\n",
+    "            int sum = numbers[left] + numbers[right];\n",
+    "            if(sum == target){\n",
+    "                return new int[] {left+1, right+1};\n",
+    "            } else if (sum > target){\n",
+    "                right--;\n",
+    "            } else {\n",
+    "                left++;\n",
+    "            }\n",
+    "        }\n",
+    "        return new int[] {-1, -1};\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47689b3f",
+   "metadata": {},
+   "source": [
+    "### Notes:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee0bfef5",
+   "metadata": {},
+   "source": [
+    "This solutions makes use of the fact that the input array is sorted to achieve O(N) time with constant space. Since we know there is exactly one solution, we know that if we start with the largest number (rightmost) plus the smallest number (leftmost), we can increment or decrement the left or right value depending on whether the current sum is greater or lesser than the target and be guaranteed to find the unique solution to the problem. We add one to each index that is found as per the problem description. The return condition outside the loop should never be hit."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d146464",
+   "id": "bd7d8b12",
    "metadata": {},
    "outputs": [],
    "source": []
